# MerkelRex-Application

./: .gitignore  Bitcoin Data.csv  CMake.txt  CMakeLists.txt  CSV Reader.cpp  Exception Handling.cpp  File Handling.cpp  File Operations.cpp  First Program.cpp  LICENSE  Menu.cpp  Menu_refactored.cpp  MerkelMain.cpp  MerkelMain.hpp  MerkelMenu.cpp  MerkelRex Engine.cpp  OrderBook.cpp  OrderBook.hpp  OrderBookEntry.cpp  OrderBookEntry.hpp  Readme.md  Statistical Functions.cpp  Statistical Functions.hpp  Tokenising test.cpp  Wallet.cpp  data.csv  main.cpp
.github/workflows/: build.yml  cmake-multi-platform.yml
MerkelRex Application/: CSV Reader.cpp  CSV Reader.hpp  MerkelMain.cpp  MerkelMain.hpp  MerkelMenu.cpp  MerkelRex Engine.cpp  MerkelRex Engine.hpp  OrderBook.cpp  OrderBook.hpp  OrderBookEntry.cpp  OrderBookEntry.hpp  Statistical Functions.cpp  Statistical Functions.hpp  Supplementary Test Functions.cpp  Wallet.cpp  Wallet.hpp  data.csv  main.cpp
docs/: Directory Structure.md  Help.txt  Readme.md
include/: Display Basics.hpp  Help.hpp  MerkelMain.hpp  MerkelRex Engine.hpp  OrderBookEntry.hpp  Wallet.hpp
src/: Display Basics.cpp  Help.cpp  MerkelMain.cpp  MerkelMenu.cpp  MerkelRex Engine.cpp  OrderBook.cpp  OrderBookEntry.cpp  Statistical Functions.cpp  Wallet.cpp  main.cpp
tests/: BidAsk.cpp  Display.cpp  Entrance Window.cpp  Statistical Functions.cpp
